# CS495-Logistics-Optimization-LLM

./: .gitignore  AUTHORS.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  benchmark_results.json  benchmark_results_all_three.json  benchmark_results_bb.json  knapsack_asm.c  pyproject.toml  requirements.txt
data/: knapsack_input.txt  sample_driver_region_data.csv
docs/: final_report.md  poster.html  poster.tex  poster_template.tex  presentation_notes.md  proposal.md  speaker_notes.html  speaker_notes.md  speaker_notes_printable.txt
notebooks/: benchmark_3way_raw.csv  benchmark_3way_results.csv  benchmark_3way_summary.csv  instance_n10.txt  instance_n15.txt  instance_n20.txt  instance_n22.txt  instance_n25.txt  knapsack_asm.c  knapsack_benchmark.ipynb  knapsack_benchmark_3way.ipynb  knapsack_brute.cpp  plan_md_instance.txt  presentation_bb.html  presentation_clean.html
results/: experiment_summary.md
src/: benchmark_all_three.py  benchmark_bb.py  benchmark_knapsack.py  build_asm.sh  data_preprocessing.py  evaluation.py  knapsack.hxm  knapsack_asm_wrapper.c  knapsack_bb_asm_wrapper.c  knapsack_branch_bound.asm  knapsack_branch_bound.cpp  knapsack_branch_bound.py  knapsack_brute.cpp  knapsack_brute_force.asm  knapsack_brute_force.cpp  knapsack_brute_force.py  knapsack_brute_force_arm64.s  knapsack_pulp.py  llm_model_generation.py  main.py  optimization_model.py  utils.py  visualize_all_three.py  visualize_bb.py  visualize_bb_extras.py  visualize_benchmark.py
tests/: test_knapsack.py
